Finished forward equivalence & unit tests